--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+.DS_Store
+__pycache__/
+*.py[cod]
+
+# course config files
+*.yaml
+
+# gradle
+.gradle/
+build
+
+
+# idea config
 .idea
+
+# old stages
+/File Manager/*
+!/File Manager/task/
+/File Manager/task/*
+!/File Manager/task/manager.py
